ABMI PACKAGE VERSIONS

Version 0.0-3, April 23, 2009

    * Documantation: reformatted at some points for
      new Rd farser compatibility.
    * ftp.upload: function to upload results via FTP.

Version 0.0-2, November 12, 2008

    * separateint: removes, because I found the base
    function strsplit().

    * is.na related functions: improvements and fixes.

    * help files: written.

Version 0.0-1, November 12, 2008 (closed November 21, 2008)

    * help files: their skeleton is added, needs much
    improvements.

    * bird data set added: bird counts from 2007 and site
    capabilities.

    * utility functions: for handling NA-s and vectorized data.

    * juliandaycount and hourcount: date/time conversion.

    * lincovtest: linear relationship of between a 
    binary response and continuous covariate can be
    visually tested (plot method provided).