@@ -7,10 +7,7 @@
 Data Processing and Analysis for the Alberta Biodiversity Monitoring Institute
 }
 \description{
-Data Processing and Analysis for the Alberta Biodiversity Monitoring Institute.
 Data processing, biodiversity intactness calculations and simulations.
-
-To be continued.
 }
 \author{
 \enc{P\'eter S\'olymos}{Peter Solymos}, \email{solymos@ualberta.ca}
